// Proto file for movie info service. Note this is gRPC proto syntax (not Go)
syntax = "proto3";

option go_package = "github.com/glatham1/CloudNativeCourse/Lab7/movieapi";

package movieapi;

service MovieInfo {
	// Sends a requeest for movie info
	rpc GetMovieInfo (MovieRequest) returns (MovieReply) {}
	rpc SetMovieInfo (MovieData) returns (Status) {}
}

// The request message containing movie name
message MovieRequest {
	string title = 1;
}

// The response message containining movie info
message MovieReply {
	int32 year = 1;
	string director = 2;
	repeated string cast = 3;
	
}

//The request message containing all aspects of the movie info
message MovieData {
	string title = 1;
	int32 year = 2;
	string director = 3;
	repeated string cast = 4;
}

//The response message containing success or failure
message Status {
	string code = 1;
}

